Default Password Warning modal add in index file

--- a/css/bootstrap.css
+++ b/css/bootstrap.css
@@ -8737,205 +8737,205 @@ th {
   visibility: hidden; }
 
 .child-row:nth-child(0) td:nth-child(2) .table-innerbox:after {
-  background: #f01c22; }
+  background: #7a62f4; }
 .child-row:nth-child(1) td:nth-child(2) .table-innerbox:after {
-  background: #3038bd; }
+  background: #cbe2e7; }
 .child-row:nth-child(2) td:nth-child(2) .table-innerbox:after {
-  background: #2382a5; }
+  background: #c684e2; }
 .child-row:nth-child(3) td:nth-child(2) .table-innerbox:after {
-  background: #ff855b; }
+  background: #de4215; }
 .child-row:nth-child(4) td:nth-child(2) .table-innerbox:after {
-  background: #4d9d76; }
+  background: #b9d8b5; }
 .child-row:nth-child(5) td:nth-child(2) .table-innerbox:after {
-  background: #027634; }
+  background: #e39e89; }
 .child-row:nth-child(6) td:nth-child(2) .table-innerbox:after {
-  background: #da844b; }
+  background: #88d131; }
 .child-row:nth-child(7) td:nth-child(2) .table-innerbox:after {
-  background: #19d608; }
+  background: #cdcd16; }
 .child-row:nth-child(8) td:nth-child(2) .table-innerbox:after {
-  background: #1e34e4; }
+  background: #21cdfe; }
 .child-row:nth-child(9) td:nth-child(2) .table-innerbox:after {
-  background: #58e187; }
+  background: #1d4d2b; }
 .child-row:nth-child(10) td:nth-child(2) .table-innerbox:after {
-  background: #9121b8; }
+  background: #c27348; }
 .child-row:nth-child(11) td:nth-child(2) .table-innerbox:after {
-  background: #5a9a31; }
+  background: #cc51be; }
 .child-row:nth-child(12) td:nth-child(2) .table-innerbox:after {
-  background: #234c7b; }
+  background: #c33286; }
 .child-row:nth-child(13) td:nth-child(2) .table-innerbox:after {
-  background: #98efb6; }
+  background: #befdd0; }
 .child-row:nth-child(14) td:nth-child(2) .table-innerbox:after {
-  background: #181aa1; }
+  background: #18cc9c; }
 .child-row:nth-child(15) td:nth-child(2) .table-innerbox:after {
-  background: #499890; }
+  background: #63855a; }
 .child-row:nth-child(16) td:nth-child(2) .table-innerbox:after {
-  background: #dafd96; }
+  background: #b88976; }
 .child-row:nth-child(17) td:nth-child(2) .table-innerbox:after {
-  background: #e20cdf; }
+  background: #607a9f; }
 .child-row:nth-child(18) td:nth-child(2) .table-innerbox:after {
-  background: #22ce02; }
+  background: #8eab61; }
 .child-row:nth-child(19) td:nth-child(2) .table-innerbox:after {
-  background: #9d01af; }
+  background: #78d80b; }
 .child-row:nth-child(20) td:nth-child(2) .table-innerbox:after {
-  background: #be14e8; }
+  background: #2dcbac; }
 .child-row:nth-child(21) td:nth-child(2) .table-innerbox:after {
-  background: #cb8b28; }
+  background: #29f5e0; }
 .child-row:nth-child(22) td:nth-child(2) .table-innerbox:after {
-  background: #2ce47d; }
+  background: #767974; }
 .child-row:nth-child(23) td:nth-child(2) .table-innerbox:after {
-  background: #f076dc; }
+  background: #8f30fd; }
 .child-row:nth-child(24) td:nth-child(2) .table-innerbox:after {
-  background: #d60e4e; }
+  background: #ac3dff; }
 .child-row:nth-child(25) td:nth-child(2) .table-innerbox:after {
-  background: #d5393f; }
+  background: #ecec91; }
 .child-row:nth-child(26) td:nth-child(2) .table-innerbox:after {
-  background: #c6019f; }
+  background: #cad297; }
 .child-row:nth-child(27) td:nth-child(2) .table-innerbox:after {
-  background: #449d74; }
+  background: #5e83ca; }
 .child-row:nth-child(28) td:nth-child(2) .table-innerbox:after {
-  background: #e3a0bd; }
+  background: #870e1d; }
 .child-row:nth-child(29) td:nth-child(2) .table-innerbox:after {
-  background: #8e3ee7; }
+  background: #0b0e52; }
 .child-row:nth-child(30) td:nth-child(2) .table-innerbox:after {
-  background: #9da8bb; }
+  background: #b54dbf; }
 .child-row:nth-child(31) td:nth-child(2) .table-innerbox:after {
-  background: #473144; }
+  background: #852825; }
 .child-row:nth-child(32) td:nth-child(2) .table-innerbox:after {
-  background: #cfa818; }
+  background: #2f0f54; }
 .child-row:nth-child(33) td:nth-child(2) .table-innerbox:after {
-  background: #59651e; }
+  background: #177059; }
 .child-row:nth-child(34) td:nth-child(2) .table-innerbox:after {
-  background: #c118b7; }
+  background: #0d680f; }
 .child-row:nth-child(35) td:nth-child(2) .table-innerbox:after {
-  background: #1dab73; }
+  background: #332749; }
 .child-row:nth-child(36) td:nth-child(2) .table-innerbox:after {
-  background: #f5347d; }
+  background: #034ee8; }
 .child-row:nth-child(37) td:nth-child(2) .table-innerbox:after {
-  background: #bb52f1; }
+  background: #5aec11; }
 .child-row:nth-child(38) td:nth-child(2) .table-innerbox:after {
-  background: #9325d1; }
+  background: #ce4902; }
 .child-row:nth-child(39) td:nth-child(2) .table-innerbox:after {
-  background: #0bc386; }
+  background: #5fa841; }
 .child-row:nth-child(40) td:nth-child(2) .table-innerbox:after {
-  background: #cade14; }
+  background: #a763ca; }
 .child-row:nth-child(41) td:nth-child(2) .table-innerbox:after {
-  background: #6f7074; }
+  background: #2b3cb6; }
 .child-row:nth-child(42) td:nth-child(2) .table-innerbox:after {
-  background: #f85679; }
+  background: #18c6da; }
 .child-row:nth-child(43) td:nth-child(2) .table-innerbox:after {
-  background: #8b590f; }
+  background: #69df34; }
 .child-row:nth-child(44) td:nth-child(2) .table-innerbox:after {
-  background: #5a1ae2; }
+  background: #16c188; }
 .child-row:nth-child(45) td:nth-child(2) .table-innerbox:after {
-  background: #d61f79; }
+  background: #d9ed82; }
 .child-row:nth-child(46) td:nth-child(2) .table-innerbox:after {
-  background: #97aa69; }
+  background: #8fdb50; }
 .child-row:nth-child(47) td:nth-child(2) .table-innerbox:after {
-  background: #278f90; }
+  background: #31d143; }
 .child-row:nth-child(48) td:nth-child(2) .table-innerbox:after {
-  background: #f2761b; }
+  background: #debb92; }
 .child-row:nth-child(49) td:nth-child(2) .table-innerbox:after {
-  background: #1b2d4d; }
+  background: #40e651; }
 .child-row:nth-child(50) td:nth-child(2) .table-innerbox:after {
-  background: #efefc6; }
+  background: #514e02; }
 .child-row:nth-child(51) td:nth-child(2) .table-innerbox:after {
-  background: #c975c2; }
+  background: #6e2ecb; }
 .child-row:nth-child(52) td:nth-child(2) .table-innerbox:after {
-  background: #869f47; }
+  background: #e66977; }
 .child-row:nth-child(53) td:nth-child(2) .table-innerbox:after {
-  background: #4f1e61; }
+  background: #2361fc; }
 .child-row:nth-child(54) td:nth-child(2) .table-innerbox:after {
-  background: #78b435; }
+  background: #04c2d6; }
 .child-row:nth-child(55) td:nth-child(2) .table-innerbox:after {
-  background: #e0afe7; }
+  background: #e5d6a2; }
 .child-row:nth-child(56) td:nth-child(2) .table-innerbox:after {
-  background: #67848d; }
+  background: #5dd0ae; }
 .child-row:nth-child(57) td:nth-child(2) .table-innerbox:after {
-  background: #27e02f; }
+  background: #34ccd9; }
 .child-row:nth-child(58) td:nth-child(2) .table-innerbox:after {
-  background: #aa7494; }
+  background: #3f2e5b; }
 .child-row:nth-child(59) td:nth-child(2) .table-innerbox:after {
-  background: #aa94ca; }
+  background: #edbcb3; }
 .child-row:nth-child(60) td:nth-child(2) .table-innerbox:after {
-  background: #15b48b; }
+  background: #f926c9; }
 .child-row:nth-child(61) td:nth-child(2) .table-innerbox:after {
-  background: #9b2e77; }
+  background: #9856ed; }
 .child-row:nth-child(62) td:nth-child(2) .table-innerbox:after {
-  background: #75adaa; }
+  background: #249d28; }
 .child-row:nth-child(63) td:nth-child(2) .table-innerbox:after {
-  background: #8b124e; }
+  background: #3591be; }
 .child-row:nth-child(64) td:nth-child(2) .table-innerbox:after {
-  background: #57a082; }
+  background: #f14389; }
 .child-row:nth-child(65) td:nth-child(2) .table-innerbox:after {
-  background: #bbed2a; }
+  background: #9b7a17; }
 .child-row:nth-child(66) td:nth-child(2) .table-innerbox:after {
-  background: #7657cf; }
+  background: #5c8d39; }
 .child-row:nth-child(67) td:nth-child(2) .table-innerbox:after {
-  background: #0157ac; }
+  background: #86ccc4; }
 .child-row:nth-child(68) td:nth-child(2) .table-innerbox:after {
-  background: #05a87b; }
+  background: #aaa471; }
 .child-row:nth-child(69) td:nth-child(2) .table-innerbox:after {
-  background: #c9f4e8; }
+  background: #aafa21; }
 .child-row:nth-child(70) td:nth-child(2) .table-innerbox:after {
-  background: #1bfed1; }
+  background: #a9d55f; }
 .child-row:nth-child(71) td:nth-child(2) .table-innerbox:after {
-  background: #268646; }
+  background: #109be5; }
 .child-row:nth-child(72) td:nth-child(2) .table-innerbox:after {
-  background: #4189bd; }
+  background: #9fd324; }
 .child-row:nth-child(73) td:nth-child(2) .table-innerbox:after {
-  background: #819c9f; }
+  background: #1d27fa; }
 .child-row:nth-child(74) td:nth-child(2) .table-innerbox:after {
-  background: #f8588e; }
+  background: #2634b0; }
 .child-row:nth-child(75) td:nth-child(2) .table-innerbox:after {
-  background: #9598ec; }
+  background: #f0ddc9; }
 .child-row:nth-child(76) td:nth-child(2) .table-innerbox:after {
-  background: #fc8a9d; }
+  background: #12c428; }
 .child-row:nth-child(77) td:nth-child(2) .table-innerbox:after {
-  background: #148ed7; }
+  background: #eb9da4; }
 .child-row:nth-child(78) td:nth-child(2) .table-innerbox:after {
-  background: #0192f8; }
+  background: #221fbc; }
 .child-row:nth-child(79) td:nth-child(2) .table-innerbox:after {
-  background: #61a556; }
+  background: #8502b6; }
 .child-row:nth-child(80) td:nth-child(2) .table-innerbox:after {
-  background: #9631bc; }
+  background: #c5bfbd; }
 .child-row:nth-child(81) td:nth-child(2) .table-innerbox:after {
-  background: #91fb2c; }
+  background: #fd31a9; }
 .child-row:nth-child(82) td:nth-child(2) .table-innerbox:after {
-  background: #911d25; }
+  background: #9c26b5; }
 .child-row:nth-child(83) td:nth-child(2) .table-innerbox:after {
-  background: #058d91; }
+  background: #14eb0e; }
 .child-row:nth-child(84) td:nth-child(2) .table-innerbox:after {
-  background: #596c89; }
+  background: #7c0d17; }
 .child-row:nth-child(85) td:nth-child(2) .table-innerbox:after {
-  background: #8969f0; }
+  background: #401c90; }
 .child-row:nth-child(86) td:nth-child(2) .table-innerbox:after {
-  background: #42920f; }
+  background: #42f91e; }
 .child-row:nth-child(87) td:nth-child(2) .table-innerbox:after {
-  background: #340b79; }
+  background: #027c10; }
 .child-row:nth-child(88) td:nth-child(2) .table-innerbox:after {
-  background: #45d44a; }
+  background: #f779e6; }
 .child-row:nth-child(89) td:nth-child(2) .table-innerbox:after {
-  background: #20770e; }
+  background: #d87dbe; }
 .child-row:nth-child(90) td:nth-child(2) .table-innerbox:after {
-  background: #eaedad; }
+  background: #a0d8d6; }
 .child-row:nth-child(91) td:nth-child(2) .table-innerbox:after {
-  background: #85b908; }
+  background: #a45b89; }
 .child-row:nth-child(92) td:nth-child(2) .table-innerbox:after {
-  background: #299898; }
+  background: #ce351e; }
 .child-row:nth-child(93) td:nth-child(2) .table-innerbox:after {
-  background: #b404fd; }
+  background: #5b1243; }
 .child-row:nth-child(94) td:nth-child(2) .table-innerbox:after {
-  background: #5cdc55; }
+  background: #598a42; }
 .child-row:nth-child(95) td:nth-child(2) .table-innerbox:after {
-  background: #cd8a5c; }
+  background: #1484cf; }
 .child-row:nth-child(96) td:nth-child(2) .table-innerbox:after {
-  background: #46fcc2; }
+  background: #57cafc; }
 .child-row:nth-child(97) td:nth-child(2) .table-innerbox:after {
-  background: #909ff7; }
+  background: #3f8227; }
 .child-row:nth-child(98) td:nth-child(2) .table-innerbox:after {
-  background: #1771b4; }
+  background: #1ed4bd; }
 .child-row:nth-child(99) td:nth-child(2) .table-innerbox:after {
-  background: #1eed89; }
+  background: #847840; }
 
 .child-row td:nth-child(2) .table-innerbox {
   position: relative; }
@@ -14888,6 +14888,22 @@ option {
 
 .default-password-small-width-modal {
   max-width: 546px !important; }
+
+.lets-get-started-modal-wrapper {
+  padding: 20px; }
+  .lets-get-started-modal-wrapper .lets-get-modal-header {
+    text-align: center;
+    font-size: 26px;
+    font-weight: 600;
+    position: relative; }
+    .lets-get-started-modal-wrapper .lets-get-modal-header p {
+      font-size: 13px;
+      font-weight: normal;
+      margin-top: 12px; }
+    .lets-get-started-modal-wrapper .lets-get-modal-header .lets-get-close {
+      position: absolute;
+      right: -28px;
+      top: -28px; }
 
 @media screen and (max-width: 767px) {
   .profile-box {
