--- a/css/bootstrap.css
+++ b/css/bootstrap.css
@@ -8737,205 +8737,205 @@ th {
   visibility: hidden; }
 
 .child-row:nth-child(0) td:nth-child(2) .table-innerbox:after {
-  background: #7a62f4; }
+  background: #e5d167; }
 .child-row:nth-child(1) td:nth-child(2) .table-innerbox:after {
-  background: #cbe2e7; }
+  background: #a6d6fa; }
 .child-row:nth-child(2) td:nth-child(2) .table-innerbox:after {
-  background: #c684e2; }
+  background: #c4fac3; }
 .child-row:nth-child(3) td:nth-child(2) .table-innerbox:after {
-  background: #de4215; }
+  background: #47eb5e; }
 .child-row:nth-child(4) td:nth-child(2) .table-innerbox:after {
-  background: #b9d8b5; }
+  background: #531b97; }
 .child-row:nth-child(5) td:nth-child(2) .table-innerbox:after {
-  background: #e39e89; }
+  background: #acaf24; }
 .child-row:nth-child(6) td:nth-child(2) .table-innerbox:after {
-  background: #88d131; }
+  background: #7b710f; }
 .child-row:nth-child(7) td:nth-child(2) .table-innerbox:after {
-  background: #cdcd16; }
+  background: #51a482; }
 .child-row:nth-child(8) td:nth-child(2) .table-innerbox:after {
-  background: #21cdfe; }
+  background: #b0b5e2; }
 .child-row:nth-child(9) td:nth-child(2) .table-innerbox:after {
-  background: #1d4d2b; }
+  background: #ad7aec; }
 .child-row:nth-child(10) td:nth-child(2) .table-innerbox:after {
-  background: #c27348; }
+  background: #a68655; }
 .child-row:nth-child(11) td:nth-child(2) .table-innerbox:after {
-  background: #cc51be; }
+  background: #e68c77; }
 .child-row:nth-child(12) td:nth-child(2) .table-innerbox:after {
-  background: #c33286; }
+  background: #51579a; }
 .child-row:nth-child(13) td:nth-child(2) .table-innerbox:after {
-  background: #befdd0; }
+  background: #5f2892; }
 .child-row:nth-child(14) td:nth-child(2) .table-innerbox:after {
-  background: #18cc9c; }
+  background: #40952a; }
 .child-row:nth-child(15) td:nth-child(2) .table-innerbox:after {
-  background: #63855a; }
+  background: #fc5cf6; }
 .child-row:nth-child(16) td:nth-child(2) .table-innerbox:after {
-  background: #b88976; }
+  background: #af5956; }
 .child-row:nth-child(17) td:nth-child(2) .table-innerbox:after {
-  background: #607a9f; }
+  background: #372977; }
 .child-row:nth-child(18) td:nth-child(2) .table-innerbox:after {
-  background: #8eab61; }
+  background: #0fb6f2; }
 .child-row:nth-child(19) td:nth-child(2) .table-innerbox:after {
-  background: #78d80b; }
+  background: #d1cf38; }
 .child-row:nth-child(20) td:nth-child(2) .table-innerbox:after {
-  background: #2dcbac; }
+  background: #f9e50b; }
 .child-row:nth-child(21) td:nth-child(2) .table-innerbox:after {
-  background: #29f5e0; }
+  background: #494c8d; }
 .child-row:nth-child(22) td:nth-child(2) .table-innerbox:after {
-  background: #767974; }
+  background: #c983e8; }
 .child-row:nth-child(23) td:nth-child(2) .table-innerbox:after {
-  background: #8f30fd; }
+  background: #eaed5b; }
 .child-row:nth-child(24) td:nth-child(2) .table-innerbox:after {
-  background: #ac3dff; }
+  background: #b328e2; }
 .child-row:nth-child(25) td:nth-child(2) .table-innerbox:after {
-  background: #ecec91; }
+  background: #4d041d; }
 .child-row:nth-child(26) td:nth-child(2) .table-innerbox:after {
-  background: #cad297; }
+  background: #2c2229; }
 .child-row:nth-child(27) td:nth-child(2) .table-innerbox:after {
-  background: #5e83ca; }
+  background: #5613b8; }
 .child-row:nth-child(28) td:nth-child(2) .table-innerbox:after {
-  background: #870e1d; }
+  background: #c763d8; }
 .child-row:nth-child(29) td:nth-child(2) .table-innerbox:after {
-  background: #0b0e52; }
+  background: #9c07df; }
 .child-row:nth-child(30) td:nth-child(2) .table-innerbox:after {
-  background: #b54dbf; }
+  background: #4f22dc; }
 .child-row:nth-child(31) td:nth-child(2) .table-innerbox:after {
-  background: #852825; }
+  background: #dd8ec0; }
 .child-row:nth-child(32) td:nth-child(2) .table-innerbox:after {
-  background: #2f0f54; }
+  background: #ca31cf; }
 .child-row:nth-child(33) td:nth-child(2) .table-innerbox:after {
-  background: #177059; }
+  background: #13c359; }
 .child-row:nth-child(34) td:nth-child(2) .table-innerbox:after {
-  background: #0d680f; }
+  background: #02b733; }
 .child-row:nth-child(35) td:nth-child(2) .table-innerbox:after {
-  background: #332749; }
+  background: #ceb7f0; }
 .child-row:nth-child(36) td:nth-child(2) .table-innerbox:after {
-  background: #034ee8; }
+  background: #1eb2b7; }
 .child-row:nth-child(37) td:nth-child(2) .table-innerbox:after {
-  background: #5aec11; }
+  background: #bf8021; }
 .child-row:nth-child(38) td:nth-child(2) .table-innerbox:after {
-  background: #ce4902; }
+  background: #2bcdcd; }
 .child-row:nth-child(39) td:nth-child(2) .table-innerbox:after {
-  background: #5fa841; }
+  background: #c914f9; }
 .child-row:nth-child(40) td:nth-child(2) .table-innerbox:after {
-  background: #a763ca; }
+  background: #af50df; }
 .child-row:nth-child(41) td:nth-child(2) .table-innerbox:after {
-  background: #2b3cb6; }
+  background: #2af320; }
 .child-row:nth-child(42) td:nth-child(2) .table-innerbox:after {
-  background: #18c6da; }
+  background: #096ecc; }
 .child-row:nth-child(43) td:nth-child(2) .table-innerbox:after {
-  background: #69df34; }
+  background: #334090; }
 .child-row:nth-child(44) td:nth-child(2) .table-innerbox:after {
-  background: #16c188; }
+  background: #7a68d6; }
 .child-row:nth-child(45) td:nth-child(2) .table-innerbox:after {
-  background: #d9ed82; }
+  background: #273130; }
 .child-row:nth-child(46) td:nth-child(2) .table-innerbox:after {
-  background: #8fdb50; }
+  background: #76bfb8; }
 .child-row:nth-child(47) td:nth-child(2) .table-innerbox:after {
-  background: #31d143; }
+  background: #ce9fb7; }
 .child-row:nth-child(48) td:nth-child(2) .table-innerbox:after {
-  background: #debb92; }
+  background: #b0aaa8; }
 .child-row:nth-child(49) td:nth-child(2) .table-innerbox:after {
-  background: #40e651; }
+  background: #412f6f; }
 .child-row:nth-child(50) td:nth-child(2) .table-innerbox:after {
-  background: #514e02; }
+  background: #0daeac; }
 .child-row:nth-child(51) td:nth-child(2) .table-innerbox:after {
-  background: #6e2ecb; }
+  background: #adf671; }
 .child-row:nth-child(52) td:nth-child(2) .table-innerbox:after {
-  background: #e66977; }
+  background: #5a22c3; }
 .child-row:nth-child(53) td:nth-child(2) .table-innerbox:after {
-  background: #2361fc; }
+  background: #df1d34; }
 .child-row:nth-child(54) td:nth-child(2) .table-innerbox:after {
-  background: #04c2d6; }
+  background: #60cb9a; }
 .child-row:nth-child(55) td:nth-child(2) .table-innerbox:after {
-  background: #e5d6a2; }
+  background: #90e499; }
 .child-row:nth-child(56) td:nth-child(2) .table-innerbox:after {
-  background: #5dd0ae; }
+  background: #acacb3; }
 .child-row:nth-child(57) td:nth-child(2) .table-innerbox:after {
-  background: #34ccd9; }
+  background: #33052d; }
 .child-row:nth-child(58) td:nth-child(2) .table-innerbox:after {
-  background: #3f2e5b; }
+  background: #fe7d44; }
 .child-row:nth-child(59) td:nth-child(2) .table-innerbox:after {
-  background: #edbcb3; }
+  background: #0999c9; }
 .child-row:nth-child(60) td:nth-child(2) .table-innerbox:after {
-  background: #f926c9; }
+  background: #39e155; }
 .child-row:nth-child(61) td:nth-child(2) .table-innerbox:after {
-  background: #9856ed; }
+  background: #961efe; }
 .child-row:nth-child(62) td:nth-child(2) .table-innerbox:after {
-  background: #249d28; }
+  background: #70463e; }
 .child-row:nth-child(63) td:nth-child(2) .table-innerbox:after {
-  background: #3591be; }
+  background: #33d46e; }
 .child-row:nth-child(64) td:nth-child(2) .table-innerbox:after {
-  background: #f14389; }
+  background: #ac61b0; }
 .child-row:nth-child(65) td:nth-child(2) .table-innerbox:after {
-  background: #9b7a17; }
+  background: #b93ca9; }
 .child-row:nth-child(66) td:nth-child(2) .table-innerbox:after {
-  background: #5c8d39; }
+  background: #87ea9a; }
 .child-row:nth-child(67) td:nth-child(2) .table-innerbox:after {
-  background: #86ccc4; }
+  background: #222f8f; }
 .child-row:nth-child(68) td:nth-child(2) .table-innerbox:after {
-  background: #aaa471; }
+  background: #73959a; }
 .child-row:nth-child(69) td:nth-child(2) .table-innerbox:after {
-  background: #aafa21; }
+  background: #62d965; }
 .child-row:nth-child(70) td:nth-child(2) .table-innerbox:after {
-  background: #a9d55f; }
+  background: #b87d06; }
 .child-row:nth-child(71) td:nth-child(2) .table-innerbox:after {
-  background: #109be5; }
+  background: #1b5ad5; }
 .child-row:nth-child(72) td:nth-child(2) .table-innerbox:after {
-  background: #9fd324; }
+  background: #f02747; }
 .child-row:nth-child(73) td:nth-child(2) .table-innerbox:after {
-  background: #1d27fa; }
+  background: #9ee283; }
 .child-row:nth-child(74) td:nth-child(2) .table-innerbox:after {
-  background: #2634b0; }
+  background: #935cb3; }
 .child-row:nth-child(75) td:nth-child(2) .table-innerbox:after {
-  background: #f0ddc9; }
+  background: #0aa03f; }
 .child-row:nth-child(76) td:nth-child(2) .table-innerbox:after {
-  background: #12c428; }
+  background: #55e23b; }
 .child-row:nth-child(77) td:nth-child(2) .table-innerbox:after {
-  background: #eb9da4; }
+  background: #d9d63f; }
 .child-row:nth-child(78) td:nth-child(2) .table-innerbox:after {
-  background: #221fbc; }
+  background: #15fe2a; }
 .child-row:nth-child(79) td:nth-child(2) .table-innerbox:after {
-  background: #8502b6; }
+  background: #2130ac; }
 .child-row:nth-child(80) td:nth-child(2) .table-innerbox:after {
-  background: #c5bfbd; }
+  background: #4c4aa4; }
 .child-row:nth-child(81) td:nth-child(2) .table-innerbox:after {
-  background: #fd31a9; }
+  background: #1e034e; }
 .child-row:nth-child(82) td:nth-child(2) .table-innerbox:after {
-  background: #9c26b5; }
+  background: #4b635b; }
 .child-row:nth-child(83) td:nth-child(2) .table-innerbox:after {
-  background: #14eb0e; }
+  background: #8cd718; }
 .child-row:nth-child(84) td:nth-child(2) .table-innerbox:after {
-  background: #7c0d17; }
+  background: #d6bde7; }
 .child-row:nth-child(85) td:nth-child(2) .table-innerbox:after {
-  background: #401c90; }
+  background: #844e56; }
 .child-row:nth-child(86) td:nth-child(2) .table-innerbox:after {
-  background: #42f91e; }
+  background: #85ad9e; }
 .child-row:nth-child(87) td:nth-child(2) .table-innerbox:after {
-  background: #027c10; }
+  background: #8e6d4e; }
 .child-row:nth-child(88) td:nth-child(2) .table-innerbox:after {
-  background: #f779e6; }
+  background: #c7386f; }
 .child-row:nth-child(89) td:nth-child(2) .table-innerbox:after {
-  background: #d87dbe; }
+  background: #944660; }
 .child-row:nth-child(90) td:nth-child(2) .table-innerbox:after {
-  background: #a0d8d6; }
+  background: #6d6592; }
 .child-row:nth-child(91) td:nth-child(2) .table-innerbox:after {
-  background: #a45b89; }
+  background: #203a2c; }
 .child-row:nth-child(92) td:nth-child(2) .table-innerbox:after {
-  background: #ce351e; }
+  background: #75deb5; }
 .child-row:nth-child(93) td:nth-child(2) .table-innerbox:after {
-  background: #5b1243; }
+  background: #5e8fba; }
 .child-row:nth-child(94) td:nth-child(2) .table-innerbox:after {
-  background: #598a42; }
+  background: #3d852e; }
 .child-row:nth-child(95) td:nth-child(2) .table-innerbox:after {
-  background: #1484cf; }
+  background: #62de3d; }
 .child-row:nth-child(96) td:nth-child(2) .table-innerbox:after {
-  background: #57cafc; }
+  background: #08f554; }
 .child-row:nth-child(97) td:nth-child(2) .table-innerbox:after {
-  background: #3f8227; }
+  background: #c083c9; }
 .child-row:nth-child(98) td:nth-child(2) .table-innerbox:after {
-  background: #1ed4bd; }
+  background: #15db9f; }
 .child-row:nth-child(99) td:nth-child(2) .table-innerbox:after {
-  background: #847840; }
+  background: #bb7298; }
 
 .child-row td:nth-child(2) .table-innerbox {
   position: relative; }
@@ -14889,6 +14889,9 @@ option {
 .default-password-small-width-modal {
   max-width: 546px !important; }
 
+.lets-get-width-modal .modal-content {
+  border-radius: 0px; }
+
 .lets-get-started-modal-wrapper {
   padding: 20px; }
   .lets-get-started-modal-wrapper .lets-get-modal-header {
@@ -14897,6 +14900,7 @@ option {
     font-weight: 600;
     position: relative; }
     .lets-get-started-modal-wrapper .lets-get-modal-header p {
+      color: #4C4C4C;
       font-size: 13px;
       font-weight: normal;
       margin-top: 12px; }
@@ -14904,6 +14908,11 @@ option {
       position: absolute;
       right: -28px;
       top: -28px; }
+
+.btn-continue {
+  background: transparent;
+  border: 0px solid #c4c4c4;
+  color: #776FFF; }
 
 @media screen and (max-width: 767px) {
   .profile-box {
