--- a/css/bootstrap.css
+++ b/css/bootstrap.css
@@ -8737,205 +8737,205 @@ th {
   visibility: hidden; }
 
 .child-row:nth-child(0) td:nth-child(2) .table-innerbox:after {
-  background: #e5d167; }
+  background: #18f18c; }
 .child-row:nth-child(1) td:nth-child(2) .table-innerbox:after {
-  background: #a6d6fa; }
+  background: #a8f2c2; }
 .child-row:nth-child(2) td:nth-child(2) .table-innerbox:after {
-  background: #c4fac3; }
+  background: #3f72c6; }
 .child-row:nth-child(3) td:nth-child(2) .table-innerbox:after {
-  background: #47eb5e; }
+  background: #a49b93; }
 .child-row:nth-child(4) td:nth-child(2) .table-innerbox:after {
-  background: #531b97; }
+  background: #1dda23; }
 .child-row:nth-child(5) td:nth-child(2) .table-innerbox:after {
-  background: #acaf24; }
+  background: #f36c02; }
 .child-row:nth-child(6) td:nth-child(2) .table-innerbox:after {
-  background: #7b710f; }
+  background: #607053; }
 .child-row:nth-child(7) td:nth-child(2) .table-innerbox:after {
-  background: #51a482; }
+  background: #063148; }
 .child-row:nth-child(8) td:nth-child(2) .table-innerbox:after {
-  background: #b0b5e2; }
+  background: #860b2e; }
 .child-row:nth-child(9) td:nth-child(2) .table-innerbox:after {
-  background: #ad7aec; }
+  background: #622e2c; }
 .child-row:nth-child(10) td:nth-child(2) .table-innerbox:after {
-  background: #a68655; }
+  background: #7f26d0; }
 .child-row:nth-child(11) td:nth-child(2) .table-innerbox:after {
-  background: #e68c77; }
+  background: #5fbb08; }
 .child-row:nth-child(12) td:nth-child(2) .table-innerbox:after {
-  background: #51579a; }
+  background: #2b7660; }
 .child-row:nth-child(13) td:nth-child(2) .table-innerbox:after {
-  background: #5f2892; }
+  background: #d89a1c; }
 .child-row:nth-child(14) td:nth-child(2) .table-innerbox:after {
-  background: #40952a; }
+  background: #039a21; }
 .child-row:nth-child(15) td:nth-child(2) .table-innerbox:after {
-  background: #fc5cf6; }
+  background: #9fd65c; }
 .child-row:nth-child(16) td:nth-child(2) .table-innerbox:after {
-  background: #af5956; }
+  background: #3125d6; }
 .child-row:nth-child(17) td:nth-child(2) .table-innerbox:after {
-  background: #372977; }
+  background: #64c31f; }
 .child-row:nth-child(18) td:nth-child(2) .table-innerbox:after {
-  background: #0fb6f2; }
+  background: #cd16f0; }
 .child-row:nth-child(19) td:nth-child(2) .table-innerbox:after {
-  background: #d1cf38; }
+  background: #9ed010; }
 .child-row:nth-child(20) td:nth-child(2) .table-innerbox:after {
-  background: #f9e50b; }
+  background: #e879f6; }
 .child-row:nth-child(21) td:nth-child(2) .table-innerbox:after {
-  background: #494c8d; }
+  background: #c1e9a6; }
 .child-row:nth-child(22) td:nth-child(2) .table-innerbox:after {
-  background: #c983e8; }
+  background: #325836; }
 .child-row:nth-child(23) td:nth-child(2) .table-innerbox:after {
-  background: #eaed5b; }
+  background: #baf2cb; }
 .child-row:nth-child(24) td:nth-child(2) .table-innerbox:after {
-  background: #b328e2; }
+  background: #f2e49b; }
 .child-row:nth-child(25) td:nth-child(2) .table-innerbox:after {
-  background: #4d041d; }
+  background: #865f5f; }
 .child-row:nth-child(26) td:nth-child(2) .table-innerbox:after {
-  background: #2c2229; }
+  background: #7f412b; }
 .child-row:nth-child(27) td:nth-child(2) .table-innerbox:after {
-  background: #5613b8; }
+  background: #d6a137; }
 .child-row:nth-child(28) td:nth-child(2) .table-innerbox:after {
-  background: #c763d8; }
+  background: #464310; }
 .child-row:nth-child(29) td:nth-child(2) .table-innerbox:after {
-  background: #9c07df; }
+  background: #78d7b6; }
 .child-row:nth-child(30) td:nth-child(2) .table-innerbox:after {
-  background: #4f22dc; }
+  background: #5146e8; }
 .child-row:nth-child(31) td:nth-child(2) .table-innerbox:after {
-  background: #dd8ec0; }
+  background: #70f5b6; }
 .child-row:nth-child(32) td:nth-child(2) .table-innerbox:after {
-  background: #ca31cf; }
+  background: #2748f8; }
 .child-row:nth-child(33) td:nth-child(2) .table-innerbox:after {
-  background: #13c359; }
+  background: #b9f358; }
 .child-row:nth-child(34) td:nth-child(2) .table-innerbox:after {
-  background: #02b733; }
+  background: #f914db; }
 .child-row:nth-child(35) td:nth-child(2) .table-innerbox:after {
-  background: #ceb7f0; }
+  background: #17597d; }
 .child-row:nth-child(36) td:nth-child(2) .table-innerbox:after {
-  background: #1eb2b7; }
+  background: #756439; }
 .child-row:nth-child(37) td:nth-child(2) .table-innerbox:after {
-  background: #bf8021; }
+  background: #e0a163; }
 .child-row:nth-child(38) td:nth-child(2) .table-innerbox:after {
-  background: #2bcdcd; }
+  background: #543046; }
 .child-row:nth-child(39) td:nth-child(2) .table-innerbox:after {
-  background: #c914f9; }
+  background: #924466; }
 .child-row:nth-child(40) td:nth-child(2) .table-innerbox:after {
-  background: #af50df; }
+  background: #c22704; }
 .child-row:nth-child(41) td:nth-child(2) .table-innerbox:after {
-  background: #2af320; }
+  background: #ce02c1; }
 .child-row:nth-child(42) td:nth-child(2) .table-innerbox:after {
-  background: #096ecc; }
+  background: #0f607f; }
 .child-row:nth-child(43) td:nth-child(2) .table-innerbox:after {
-  background: #334090; }
+  background: #5610e0; }
 .child-row:nth-child(44) td:nth-child(2) .table-innerbox:after {
-  background: #7a68d6; }
+  background: #e33a51; }
 .child-row:nth-child(45) td:nth-child(2) .table-innerbox:after {
-  background: #273130; }
+  background: #706a44; }
 .child-row:nth-child(46) td:nth-child(2) .table-innerbox:after {
-  background: #76bfb8; }
+  background: #9652b1; }
 .child-row:nth-child(47) td:nth-child(2) .table-innerbox:after {
-  background: #ce9fb7; }
+  background: #6bb438; }
 .child-row:nth-child(48) td:nth-child(2) .table-innerbox:after {
-  background: #b0aaa8; }
+  background: #aca344; }
 .child-row:nth-child(49) td:nth-child(2) .table-innerbox:after {
-  background: #412f6f; }
+  background: #b4b9ed; }
 .child-row:nth-child(50) td:nth-child(2) .table-innerbox:after {
-  background: #0daeac; }
+  background: #4a2f8a; }
 .child-row:nth-child(51) td:nth-child(2) .table-innerbox:after {
-  background: #adf671; }
+  background: #f74235; }
 .child-row:nth-child(52) td:nth-child(2) .table-innerbox:after {
-  background: #5a22c3; }
+  background: #345a6b; }
 .child-row:nth-child(53) td:nth-child(2) .table-innerbox:after {
-  background: #df1d34; }
+  background: #8cccc1; }
 .child-row:nth-child(54) td:nth-child(2) .table-innerbox:after {
-  background: #60cb9a; }
+  background: #1c55bc; }
 .child-row:nth-child(55) td:nth-child(2) .table-innerbox:after {
-  background: #90e499; }
+  background: #1f121b; }
 .child-row:nth-child(56) td:nth-child(2) .table-innerbox:after {
-  background: #acacb3; }
+  background: #ba7d75; }
 .child-row:nth-child(57) td:nth-child(2) .table-innerbox:after {
-  background: #33052d; }
+  background: #3b3a9f; }
 .child-row:nth-child(58) td:nth-child(2) .table-innerbox:after {
-  background: #fe7d44; }
+  background: #f70d8b; }
 .child-row:nth-child(59) td:nth-child(2) .table-innerbox:after {
-  background: #0999c9; }
+  background: #dae55f; }
 .child-row:nth-child(60) td:nth-child(2) .table-innerbox:after {
-  background: #39e155; }
+  background: #75179c; }
 .child-row:nth-child(61) td:nth-child(2) .table-innerbox:after {
-  background: #961efe; }
+  background: #a01f6d; }
 .child-row:nth-child(62) td:nth-child(2) .table-innerbox:after {
-  background: #70463e; }
+  background: #8c7895; }
 .child-row:nth-child(63) td:nth-child(2) .table-innerbox:after {
-  background: #33d46e; }
+  background: #ee4113; }
 .child-row:nth-child(64) td:nth-child(2) .table-innerbox:after {
-  background: #ac61b0; }
+  background: #de07be; }
 .child-row:nth-child(65) td:nth-child(2) .table-innerbox:after {
-  background: #b93ca9; }
+  background: #eb30e2; }
 .child-row:nth-child(66) td:nth-child(2) .table-innerbox:after {
-  background: #87ea9a; }
+  background: #5d8b26; }
 .child-row:nth-child(67) td:nth-child(2) .table-innerbox:after {
-  background: #222f8f; }
+  background: #38c0fe; }
 .child-row:nth-child(68) td:nth-child(2) .table-innerbox:after {
-  background: #73959a; }
+  background: #94b081; }
 .child-row:nth-child(69) td:nth-child(2) .table-innerbox:after {
-  background: #62d965; }
+  background: #2aec66; }
 .child-row:nth-child(70) td:nth-child(2) .table-innerbox:after {
-  background: #b87d06; }
+  background: #722fdc; }
 .child-row:nth-child(71) td:nth-child(2) .table-innerbox:after {
-  background: #1b5ad5; }
+  background: #dbf808; }
 .child-row:nth-child(72) td:nth-child(2) .table-innerbox:after {
-  background: #f02747; }
+  background: #e59d1b; }
 .child-row:nth-child(73) td:nth-child(2) .table-innerbox:after {
-  background: #9ee283; }
+  background: #2b9e21; }
 .child-row:nth-child(74) td:nth-child(2) .table-innerbox:after {
-  background: #935cb3; }
+  background: #d9335c; }
 .child-row:nth-child(75) td:nth-child(2) .table-innerbox:after {
-  background: #0aa03f; }
+  background: #560282; }
 .child-row:nth-child(76) td:nth-child(2) .table-innerbox:after {
-  background: #55e23b; }
+  background: #a2f815; }
 .child-row:nth-child(77) td:nth-child(2) .table-innerbox:after {
-  background: #d9d63f; }
+  background: #199512; }
 .child-row:nth-child(78) td:nth-child(2) .table-innerbox:after {
-  background: #15fe2a; }
+  background: #155ee1; }
 .child-row:nth-child(79) td:nth-child(2) .table-innerbox:after {
-  background: #2130ac; }
+  background: #9acefc; }
 .child-row:nth-child(80) td:nth-child(2) .table-innerbox:after {
-  background: #4c4aa4; }
+  background: #7d8e51; }
 .child-row:nth-child(81) td:nth-child(2) .table-innerbox:after {
-  background: #1e034e; }
+  background: #8b228f; }
 .child-row:nth-child(82) td:nth-child(2) .table-innerbox:after {
-  background: #4b635b; }
+  background: #9efdc6; }
 .child-row:nth-child(83) td:nth-child(2) .table-innerbox:after {
-  background: #8cd718; }
+  background: #c87a7a; }
 .child-row:nth-child(84) td:nth-child(2) .table-innerbox:after {
-  background: #d6bde7; }
+  background: #8c4d4d; }
 .child-row:nth-child(85) td:nth-child(2) .table-innerbox:after {
-  background: #844e56; }
+  background: #678d07; }
 .child-row:nth-child(86) td:nth-child(2) .table-innerbox:after {
-  background: #85ad9e; }
+  background: #780b09; }
 .child-row:nth-child(87) td:nth-child(2) .table-innerbox:after {
-  background: #8e6d4e; }
+  background: #1869bc; }
 .child-row:nth-child(88) td:nth-child(2) .table-innerbox:after {
-  background: #c7386f; }
+  background: #7a3627; }
 .child-row:nth-child(89) td:nth-child(2) .table-innerbox:after {
-  background: #944660; }
+  background: #2258fd; }
 .child-row:nth-child(90) td:nth-child(2) .table-innerbox:after {
-  background: #6d6592; }
+  background: #a0be51; }
 .child-row:nth-child(91) td:nth-child(2) .table-innerbox:after {
-  background: #203a2c; }
+  background: #6869c0; }
 .child-row:nth-child(92) td:nth-child(2) .table-innerbox:after {
-  background: #75deb5; }
+  background: #bcae3f; }
 .child-row:nth-child(93) td:nth-child(2) .table-innerbox:after {
-  background: #5e8fba; }
+  background: #715cc7; }
 .child-row:nth-child(94) td:nth-child(2) .table-innerbox:after {
-  background: #3d852e; }
+  background: #1c4b2d; }
 .child-row:nth-child(95) td:nth-child(2) .table-innerbox:after {
-  background: #62de3d; }
+  background: #db6950; }
 .child-row:nth-child(96) td:nth-child(2) .table-innerbox:after {
-  background: #08f554; }
+  background: #f90eba; }
 .child-row:nth-child(97) td:nth-child(2) .table-innerbox:after {
-  background: #c083c9; }
+  background: #eab45d; }
 .child-row:nth-child(98) td:nth-child(2) .table-innerbox:after {
-  background: #15db9f; }
+  background: #14a938; }
 .child-row:nth-child(99) td:nth-child(2) .table-innerbox:after {
-  background: #bb7298; }
+  background: #a037e2; }
 
 .child-row td:nth-child(2) .table-innerbox {
   position: relative; }
@@ -14889,11 +14889,13 @@ option {
 .default-password-small-width-modal {
   max-width: 546px !important; }
 
-.lets-get-width-modal .modal-content {
-  border-radius: 0px; }
+.lets-get-width-modal {
+  max-width: 900px !important; }
+  .lets-get-width-modal .modal-content {
+    border-radius: 0px; }
 
 .lets-get-started-modal-wrapper {
-  padding: 20px; }
+  padding: 30px; }
   .lets-get-started-modal-wrapper .lets-get-modal-header {
     text-align: center;
     font-size: 26px;
@@ -14913,6 +14915,20 @@ option {
   background: transparent;
   border: 0px solid #c4c4c4;
   color: #776FFF; }
+
+.tow-boxs-div {
+  display: grid;
+  grid-template-columns: repeat(auto-fit, minmax(240px, 1fr));
+  grid-gap: 30px;
+  margin-top: 40px; }
+  .tow-boxs-div .box-div {
+    text-align: center;
+    border: 1px solid #CACACA;
+    padding: 12px;
+    font-size: 14px;
+    color: #4C4C4C; }
+    .tow-boxs-div .box-div .box-img {
+      margin-bottom: 20px; }
 
 @media screen and (max-width: 767px) {
   .profile-box {
